<resources>
    <string name="app_name" translatable="false">Numeritos</string>
    <string name="inicio_logo" translatable="false">NUMERITOS</string>
    <string name="inicio_btn_acceso">Acceder</string>
    <string name="centro_btn_ranking">Tabla de puntuaciones</string>
    <string name="centro_btn_ajustes">Ajustes</string>
    <string name="centro_btn_salir">Salir del juego</string>
    <string name="ajustes_pref_idioma">Idioma de la applicación</string>
    <string name="ajustes_text_ajustes">Ajustes</string>
    <string name="ajustes_text_usuario">Usuario:</string>
    <string name="ajustes_btn_salir">Volver a inicio</string>
    <string name="login_titulo">¿Quién va a jugar?</string>
    <string name="login_username">Nombre de usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_registro">¿Es tu primera vez?\nRegístrate aquí</string>
    <string name="register_titulo">Regístrate</string>
    <string name="register_nombre">Nombre</string>
    <string name="register_apellidos">Apellido(s)</string>
    <string name="register_password2">Repite la contraseña</string>
    <string name="register_btn">Registrarse</string>
    <string name="jugar_txt_puntuacion">Puntuación:</string>
    <string name="jugar_respuesta">Responder</string>
    <string name="jugar_instrucciones">Cómo jugar</string>
    <string name="jugar_hint">Tu respuesta</string>
    <string name="jugar_msg_input_vacio">Por favor introduce tu respuesta</string>
    <string name="login_msg_campos_vacios">Introduce un usuario y contraseña</string>
    <string name="login_msg_error">Usuario o contraseña incorrectos</string>
    <string name="login_msg_log">Logueado correctamente</string>
    <string name="register_msg_campos_vacios">Por favor rellena todos los campos</string>
    <string name="register_msg_passwords">Las contraseñas no coinciden</string>
    <string name="register_msg_registro">Registrado exitosamente</string>
    <string name="salir_msg">¿Estás seguro que quieres salir?</string>
    <string name="salir_msg_si">Sí</string>
    <string name="instrucciones_msg_titulo">Bienvenido a Numeritos</string>
    <string name="instrucciones_msg">- En este juego, aparecerá un número diferente cada vez en la pantalla. Tu objetivo es introducir ese número además de todos los anteriores en el orden en el que han aparecido. Si fallas, el juego terminará.</string>
    <string name="instrucciones_msg_btn">Entendido</string>
    <string name="derrota_msg">¡Has perdido!</string>
    <string name="derrota_ptos">Puntuación:</string>
    <string name="derrota_salir">Salir</string>
    <string name="derrota_compartir">Compartir</string>
    <string name="ranking_titulo">Tabla de puntuaciones</string>
    <string name="login_msg_usuario">El usuario introducido ya existe</string>
    <string name="ajustes_msg_notif">Se ha guardado la configuración</string>
    <string name="jugar_msg_rank1">¡Has llegado al top 1 del ranking!</string>
    <string name="jugar_msg_rank2">¡Has llegado al top 2 del ranking!</string>
    <string name="jugar_msg_rank3">¡Has llegado al top 3 del ranking!</string>
    <string name="derrota_msg_compartir">¡He jugado a Numeritos y he obtenido una puntuación de</string>
    <string name="derrota_msg_via">Compartir via:</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="ajustes_title_idioma">Elige un idioma:</string>
    <string-array name="idiomas">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="ajustes_pref_tema">Tema de la aplicación</string>
    <string-array name="temas">
        <item>Estándar</item>
        <item>Bosque</item>
        <item>Mar</item>
    </string-array>
    <string name="ajustes_title_tema">Escoge un tema:</string>
    <string name="ajustes_pref_notifs">Activar notificaciones</string>
    <string name="centro_btn_jugar">Jugar</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="centro_btn_perfil">Perfil</string>
    <string name="perfil_btn_guardar">Guardar cambios y salir</string>
    <string name="perfil_text_username">Nombre de usuario:</string>
    <string name="centro_btn_mapa">Mapa</string>
    <string name="notif_diaria">¿Has probado a batir un record hoy?</string>
    <string name="title_activity_mapa">Activity_mapa</string>
    <string name="notif_perfil">Cambios guardados con éxito</string>
</resources>