<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <ListPreference
            android:dialogTitle="@string/ajustes_title_idioma"
            android:entries="@array/idiomas"
            android:entryValues="@array/idiomas_valor"
            android:key="idiomaPref"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="1"
            android:title="@string/ajustes_pref_idioma" />

        <ListPreference
            android:dialogTitle="@string/ajustes_title_tema"
            android:entries="@array/temas"
            android:entryValues="@array/temas_valor"
            android:key="temaPref"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="1"
            android:title="@string/ajustes_pref_tema" />

        <SwitchPreferenceCompat
            android:key="notifPref"
            android:defaultValue="false"
            android:title="@string/ajustes_pref_notifs" />

    </PreferenceCategory>

</PreferenceScreen>